<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#fb8500"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/calculate_your"
        android:textColor="#2b2d42"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#48bfe3"
        android:paddingLeft="35dp"
        android:paddingTop="15dp"
        android:paddingRight="35dp"
        android:paddingBottom="15dp"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in_hour"
        android:textColor="#2b2d42"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/BottonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select_date"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Selectddate"
        android:layout_width="wrap_content"
        android:hint="06/06/2022"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#ffbd00"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textColor="#e3d5ca"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/minutesin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/_24"
        android:textColor="#ffbd00"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_hour_till_date"
        android:textColor="#e3d5ca"
        android:textSize="15sp"
        android:textStyle="bold"
        />


</LinearLayout>